# POO_project

./: Bicicleta.h  CMakeLists.txt  Camion.h  Carro.h  Llanta.h  Marca.h  Moto.h  Motor.h  Motorizados.h  NoMotorizado.h  PlataformaManejo.h  PlataformaManejoCarro.h  PlataformaManejoMoto.h  TipoConduccion.h  Transmision.h  TransmisionCarro.h  TransmisionMoto.h  comprador.h  consultor.h  cuenta.h  documento.h  engine.h  fecha.h  main  main.cpp  nombre.h  persona.h  rin.h  tipocliente.h  vehiculo.h  vendedor.h  venta.h
Directorio/: asesor.h  comprador.h  cuenta.h  documento.h  fecha.h  nombre.h  persona.h  tipocliente.h  vendedor.h  venta.h
